--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         restart: always
         ports:
             - 5432:5432
+            
         environment: 
             - POSTGRES_USER=docker
             - POSTGRES_PASSWORD=ignite
@@ -19,8 +20,9 @@ services:
         container_name: rentx
         ports: 
             - 3333:3333
+            - 9229:9229
         volumes: 
-            - .:/user/app
+            - .:/usr/app
         links:
             - database_ignite
         depends_on: 
